ProductDetails - Fix Out of stock button width to avoid breaking the alignment

--- a/src/pages/ProductDetails/ProductDetails.css
+++ b/src/pages/ProductDetails/ProductDetails.css
@@ -129,7 +129,7 @@
       z-index: 3;
     }
     .buy-button {
-      width: 40%;
+      width: 45%;
     }
     .buy-button:hover {
       background-color: #161616;
